--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "@tsconfig/recommended/tsconfig.json",
 	"files": [
-		"index.ts"
+		"server.ts"
 	],
 	"include": ["src/**/*"],
 	"exclude": ["**/*.spec.ts"],
